// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`C01 — панель дома > активная авария, последний итог, участники, модельные данные 1`] = `
"**🏠 Дом 1 · ул. Модельная, 1**
Активные аварии: 1 — нет горячей воды с 17:40
Последний итог: 12.09 холодная вода, устранено в норматив
В чате 312 участников
Модельные данные"
`;

exports[`C01 — панель дома > без активных аварий и без итога; 1 участник 1`] = `
"**🏠 Дом 1 · ул. Модельная, 1**
Активных аварий нет
В чате 1 участник
Модельные данные"
`;

exports[`C05 — личка > delete: в лимитах MAX 1`] = `
{
  "keyboard": [
    [
      {
        "payload": "v1:delete:-:yes",
        "text": "Удалить",
        "type": "callback",
      },
      {
        "payload": "v1:delete:-:no",
        "text": "Отмена",
        "type": "callback",
      },
    ],
  ],
  "text": "Удалить ваши данные?
Дом, квартира и роль будут удалены. Отменить нельзя",
}
`;

exports[`C05 — личка > flat: в лимитах MAX 1`] = `
{
  "keyboard": [
    [
      {
        "payload": "v1:cancel:-",
        "text": "Отмена",
        "type": "callback",
      },
    ],
  ],
  "text": "Напишите номер квартиры, например 57
Квартиры в этом доме: 1–144",
}
`;

exports[`C05 — личка > flat-error: в лимитах MAX 1`] = `
{
  "keyboard": [
    [
      {
        "payload": "v1:cancel:-",
        "text": "Отмена",
        "type": "callback",
      },
    ],
  ],
  "text": "Квартиры в этом доме: 1–144. Проверьте номер и напишите ещё раз",
}
`;

exports[`C05 — личка > help: в лимитах MAX 1`] = `
{
  "keyboard": [],
  "text": "«Всем домом» собирает аварию в доме в одну карточку в чате: соседи отмечаются кнопкой, видят сроки по нормативам и ответ УК
Команды: /menu — главное меню, /report — сообщить об аварии, /delete — удалить мои данные",
}
`;

exports[`C05 — личка > house: в лимитах MAX 1`] = `
{
  "keyboard": [
    [
      {
        "payload": "v1:house:dom1model1",
        "text": "Дом 1 · ул. Модельная, 1",
        "type": "callback",
      },
    ],
    [
      {
        "payload": "v1:house:dom2model2",
        "text": "Дом 2 · ул. Модельная, 2",
        "type": "callback",
      },
    ],
  ],
  "text": "В каком доме вы живёте?
Модельные данные",
}
`;

exports[`C05 — личка > menu: в лимитах MAX 1`] = `
{
  "keyboard": [
    [
      {
        "payload": "v1:rep_service:dom1model1",
        "text": "Сообщить об аварии",
        "type": "callback",
      },
    ],
    [
      {
        "payload": "h_dom1model1",
        "text": "Мой дом",
        "type": "open_app",
        "webApp": "bot",
      },
    ],
  ],
  "text": "Вы — житель дома 1, кв. 57
Квартира изменена — уровень доверия сброшен до «заявлено»
Если что-то случилось — сообщите здесь или кнопкой в чате дома
Модельные данные",
}
`;

exports[`C05 — личка > menu-registered: в лимитах MAX 1`] = `
{
  "keyboard": [
    [
      {
        "payload": "v1:rep_service:dom1model1",
        "text": "Сообщить об аварии",
        "type": "callback",
      },
    ],
    [
      {
        "payload": "h_dom1model1",
        "text": "Мой дом",
        "type": "open_app",
        "webApp": "bot",
      },
    ],
    [
      {
        "text": "Вступить в чат дома",
        "type": "link",
        "url": "https://max.ru/join/x",
      },
    ],
  ],
  "text": "Готово. Вы — житель дома 1, кв. 57
Если что-то случилось — сообщите здесь или кнопкой в чате дома
Вступите в чат дома — там карточки аварий и ответы УК
Модельные данные",
}
`;

exports[`C05 — личка > role: в лимитах MAX 1`] = `
{
  "keyboard": [
    [
      {
        "payload": "v1:role:-:owner",
        "text": "Собственник",
        "type": "callback",
      },
      {
        "payload": "v1:role:-:renter",
        "text": "Снимаю",
        "type": "callback",
      },
    ],
    [
      {
        "payload": "v1:role:-:social_tenant",
        "text": "Соцнайм",
        "type": "callback",
      },
      {
        "payload": "v1:role:-:family",
        "text": "Член семьи",
        "type": "callback",
      },
    ],
    [
      {
        "payload": "v1:cancel:-",
        "text": "Отмена",
        "type": "callback",
      },
    ],
  ],
  "text": "Кто вы в квартире?
Это нужно, чтобы понять, от чьего имени можно подать заявление",
}
`;

exports[`C05 — личка > unregistered: в лимитах MAX 1`] = `
{
  "keyboard": [
    [
      {
        "payload": "v1:menu:-:register",
        "text": "Указать дом и квартиру",
        "type": "callback",
      },
    ],
  ],
  "text": "Чтобы сообщать об авариях, укажите дом и квартиру",
}
`;

exports[`C05 — личка > welcome: в лимитах MAX 1`] = `
{
  "keyboard": [
    [
      {
        "payload": "v1:pdn:-",
        "text": "Согласен",
        "type": "callback",
      },
      {
        "text": "Политика данных",
        "type": "link",
        "url": "https://app.example.ru/privacy",
      },
    ],
  ],
  "text": "Здравствуйте. Я «Всем домом» — помогаю дому сообщать об авариях и видеть сроки по нормативам
Для начала нужно ваше согласие на обработку данных: дом, квартира и роль. Имена в чате не показываем",
}
`;

exports[`C09 — бот добавлен в чат > кнопка open_app с одноразовым токеном 1`] = `
"Здравствуйте. Я «Всем домом»: собираю аварию в доме в одну карточку со сроками по нормативам.
Чтобы начать, сотрудник УК привязывает чат к дому, а бот должен быть администратором чата"
`;
